Explicit requirements for deepsmith.

--- a/deeplearning/deepsmith/BUILD
+++ b/deeplearning/deepsmith/BUILD
@@ -1,3 +1,5 @@
+load("@requirements//:requirements.bzl", "requirement")
+
 licenses(["restricted"])  # GPL v3
 
 exports_files(["LICENSE"])
@@ -12,6 +14,7 @@ py_library(
         ":datastore",
         ":db",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        requirement("pytest"),
     ],
 )
 
@@ -40,6 +43,8 @@ py_library(
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//lib/labm8:pbutil",
         "//lib/labm8:sqlutil",
+        requirement("absl-py"),
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -51,6 +56,8 @@ py_library(
         "//deeplearning/deepsmith/proto:datastore_py_pb2",
         "//lib/labm8:labdate",
         "//lib/labm8:pbutil",
+        requirement("absl-py"),
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -64,6 +71,8 @@ py_test(
         ":conftest",
         ":db",
         ":toolchain",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
 
@@ -76,6 +85,7 @@ py_library(
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//lib/labm8:labdate",
         "//lib/labm8:sqlutil",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -89,6 +99,8 @@ py_test(
         ":conftest",
         ":generator",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
 
@@ -102,6 +114,7 @@ py_library(
         "//lib/labm8:labdate",
         "//lib/labm8:sqlutil",
         "//lib/labm8:system",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -115,6 +128,8 @@ py_test(
         ":conftest",
         ":harness",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
 
@@ -135,6 +150,7 @@ py_library(
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//lib/labm8:labdate",
         "//lib/labm8:sqlutil",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -151,6 +167,7 @@ py_library(
         "//lib/labm8:labdate",
         "//lib/labm8:pbutil",
         "//lib/labm8:sqlutil",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -171,6 +188,8 @@ py_test(
         ":testcase",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//lib/labm8:labdate",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
 
@@ -184,6 +203,7 @@ py_library(
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//lib/labm8:labdate",
         "//lib/labm8:sqlutil",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -198,6 +218,8 @@ py_test(
         ":testbed",
         ":toolchain",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
 
@@ -215,6 +237,7 @@ py_library(
         "//lib/labm8:labdate",
         "//lib/labm8:pbutil",
         "//lib/labm8:sqlutil",
+        requirement("sqlalchemy"),
     ],
 )
 
@@ -234,5 +257,7 @@ py_test(
         ":toolchain",
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//lib/labm8:labdate",
+        requirement("absl-py"),
+        requirement("pytest"),
     ],
 )
