--- a/deeplearning/deepsmith/cli/BUILD
+++ b/deeplearning/deepsmith/cli/BUILD
@@ -1,3 +1,5 @@
+load("@requirements//:requirements.bzl", "requirement")
+
 py_binary(
     name = "explore",
     srcs = ["explore.py"],
@@ -6,6 +8,7 @@ py_binary(
         "//deeplearning/deepsmith:db",
         "//deeplearning/deepsmith:result",
         "//lib/labm8:pbutil",
+        requirement("absl-py"),
     ],
 )
 
@@ -17,6 +20,7 @@ py_binary(
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:generator_py_pb2",
         "//deeplearning/deepsmith/services",
+        requirement("absl-py"),
     ],
 )
 
@@ -29,6 +33,8 @@ py_binary(
         "//deeplearning/deepsmith:result",
         "//deeplearning/deepsmith:testcase",
         "//lib/labm8:pbutil",
+        requirement("absl-py"),
+        requirement("progressbar2"),
     ],
 )
 
@@ -40,5 +46,6 @@ py_binary(
         "//deeplearning/deepsmith/proto:deepsmith_py_pb2",
         "//deeplearning/deepsmith/proto:harness_py_pb2",
         "//deeplearning/deepsmith/services",
+        requirement("absl-py"),
     ],
 )
