--- a/experimental/deeplearning/fish/BUILD
+++ b/experimental/deeplearning/fish/BUILD
@@ -1,5 +1,7 @@
 # Experiments in machine learning for compiler test case analysis.
 
+load("@requirements//:requirements.bzl", "requirement")
+
 py_binary(
     name = "export_clang_opencl_dataset",
     srcs = ["export_clang_opencl_dataset.py"],
@@ -7,6 +9,9 @@ py_binary(
         "//experimental/deeplearning/fish/proto:fish_py_pb2",
         "//lib/labm8:fs",
         "//lib/labm8:pbutil",
+        requirement("mysqlclient"),
+        requirement("humanize"),
+        requirement("absl-py"),
     ],
 )
 
@@ -17,11 +22,19 @@ py_binary(
         "//experimental/deeplearning/fish/proto:fish_py_pb2",
         "//lib/labm8:fs",
         "//lib/labm8:pbutil",
+        requirement("humanize"),
+        requirement("absl-py"),
     ],
 )
 
 py_binary(
     name = "train_discriminator",
     srcs = ["train_discriminator.py"],
-    deps = ["//experimental/deeplearning/fish/proto:fish_py_pb2"],
+    deps = [
+        "//experimental/deeplearning/fish/proto:fish_py_pb2",
+        requirement("absl-py"),
+        requirement("humanize"),
+        requirement("keras"),
+        requirement("numpy"),
+    ],
 )
