--- a/tools/code_style/templates/BUILD
+++ b/tools/code_style/templates/BUILD
@@ -1,5 +1,6 @@
 # TODO: One line summary of package.
 
+load("@requirements//:requirements.bzl", "requirement")
 load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
 
 py_proto_library(
@@ -10,6 +11,9 @@ py_proto_library(
 py_library(
     name = "python",
     srcs = ["python.py"],
+    deps = [
+        requirement("absl-py"),
+    ],
 )
 
 py_test(
@@ -18,4 +22,8 @@ py_test(
     srcs = ["python_test.py"],
     default_python_version = "PY3",
     srcs_version = "PY3",
+    deps = [
+        requirement("absl-py"),
+        requirement("pytest"),
+    ],
 )
