Add more missing deps.

--- a/learn/ml/BUILD
+++ b/learn/ml/BUILD
@@ -1,7 +1,13 @@
+load("@requirements//:requirements.bzl", "requirement")
+
 py_test(
     name = "batch_linear_regression",
     size = "small",
     srcs = ["batch_linear_regression.py"],
     default_python_version = "PY3",
     srcs_version = "PY3",
+    deps = [
+        requirement("absl-py"),
+        requirement("six"),
+    ],
 )
