--- a/lib/labm8/proto/BUILD
+++ b/lib/labm8/proto/BUILD
@@ -1,17 +1,20 @@
 # Protocol buffers for labm8.
 
+load("@requirements//:requirements.bzl", "requirement")
 load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
 
 py_proto_library(
     name = "lockfile_py_pb2",
     protos = ["lockfile.proto"],
     visibility = ["//lib/labm8:__subpackages__"],
+    deps = [requirement("protobuf")],
 )
 
 py_proto_library(
     name = "logging_py_pb2",
     protos = ["logging.proto"],
     visibility = ["//visibility:public"],
+    deps = [requirement("protobuf")],
 )
 
 py_proto_library(
@@ -19,4 +22,5 @@ py_proto_library(
     testonly = 1,
     protos = ["test_protos.proto"],
     visibility = ["//lib/labm8:__subpackages__"],
+    deps = [requirement("protobuf")],
 )
