--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -110,6 +110,7 @@ pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
 scandir==1.7
+scikit-learn==0.19.1
 scipy==1.0.0
 seaborn==0.8.1
 Send2Trash==1.5.0
