--- a/experimental/deeplearning/polyglot/BUILD
+++ b/experimental/deeplearning/polyglot/BUILD
@@ -17,6 +17,7 @@ py_library(
 py_test(
     name = "get_instances_test",
     srcs = ["get_instances_test.py"],
+    size = "enormous",
     default_python_version = "PY3",
     srcs_version = "PY3",
     deps = [
