--- a/requirements.txt
+++ b/requirements.txt
@@ -120,8 +120,9 @@ six==1.11.0
 SQLAlchemy==1.2.4
 statistics==1.0.3.5
 subprocess32==3.5.0
-# If ./configure detects CUDA, tensorflow-gpu is used.
+# The versions for tensorflow and tensorflow-gpu must be kept in lock step.
 tensorflow==1.8.0
+tensorflow-gpu==1.8.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0
