Revert "Don't generate requirements.txt during configure."
This reverts commit 227513c4d8593a447eafbac78ce2806af9ac5224.

--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -120,9 +120,8 @@ six==1.11.0
 SQLAlchemy==1.2.4
 statistics==1.0.3.5
 subprocess32==3.5.0
-# The versions for tensorflow and tensorflow-gpu must be kept in lock step.
+# If ./configure detects CUDA, tensorflow-gpu is used.
 tensorflow==1.8.0
-tensorflow-gpu==1.8.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.0
