--- a/deeplearning/clgen/native/BUILD
+++ b/deeplearning/clgen/native/BUILD
@@ -505,492 +505,15 @@ cc_binary(
 cc_binary(
     name = "clgen-rewriter",
     srcs = ["clgen-rewriter.cpp"],
-    copts = [
-        "-fPIC",
-        "-fvisibility-inlines-hidden",
-        "-Werror=date-time",
-        "-std=c++11",
-        "-Wall",
-        "-W",
-        "-Wno-unused-parameter",
-        "-Wwrite-strings",
-        "-Wcast-qual",
-        "-Wno-missing-field-initializers",
-        "-pedantic",
-        "-Wno-long-long",
-        "-Wdelete-non-virtual-dtor",
-        "-Wno-comment",
-        "-ffunction-sections",
-        "-fdata-sections",
-        "-DNDEBUG",
-        "-D_GNU_SOURCE",
-        "-D__STDC_CONSTANT_MACROS",
-        "-D__STDC_FORMAT_MACROS",
-        "-D__STDC_LIMIT_MACROS",
-    ],
-    linkopts = select({
-        "//:darwin": [
-            "-Wl,-rpath,/usr/local/opt/llvm/lib",
-            "-L/usr/local/opt/llvm/lib",
-            "-Wl,-search_paths_first",
-            "-Wl,-headerpad_max_install_names",
-            "-lLLVMLTO",
-            "-lLLVMPasses",
-            "-lLLVMObjCARCOpts",
-            "-lLLVMSymbolize",
-            "-lLLVMDebugInfoPDB",
-            "-lLLVMDebugInfoDWARF",
-            "-lLLVMMIRParser",
-            "-lLLVMCoverage",
-            "-lLLVMTableGen",
-            "-lLLVMDlltoolDriver",
-            "-lLLVMOrcJIT",
-            "-lLLVMXCoreDisassembler",
-            "-lLLVMXCoreCodeGen",
-            "-lLLVMXCoreDesc",
-            "-lLLVMXCoreInfo",
-            "-lLLVMXCoreAsmPrinter",
-            "-lLLVMSystemZDisassembler",
-            "-lLLVMSystemZCodeGen",
-            "-lLLVMSystemZAsmParser",
-            "-lLLVMSystemZDesc",
-            "-lLLVMSystemZInfo",
-            "-lLLVMSystemZAsmPrinter",
-            "-lLLVMSparcDisassembler",
-            "-lLLVMSparcCodeGen",
-            "-lLLVMSparcAsmParser",
-            "-lLLVMSparcDesc",
-            "-lLLVMSparcInfo",
-            "-lLLVMSparcAsmPrinter",
-            "-lLLVMPowerPCDisassembler",
-            "-lLLVMPowerPCCodeGen",
-            "-lLLVMPowerPCAsmParser",
-            "-lLLVMPowerPCDesc",
-            "-lLLVMPowerPCInfo",
-            "-lLLVMPowerPCAsmPrinter",
-            "-lLLVMNVPTXCodeGen",
-            "-lLLVMNVPTXDesc",
-            "-lLLVMNVPTXInfo",
-            "-lLLVMNVPTXAsmPrinter",
-            "-lLLVMMSP430CodeGen",
-            "-lLLVMMSP430Desc",
-            "-lLLVMMSP430Info",
-            "-lLLVMMSP430AsmPrinter",
-            "-lLLVMMipsDisassembler",
-            "-lLLVMMipsCodeGen",
-            "-lLLVMMipsAsmParser",
-            "-lLLVMMipsDesc",
-            "-lLLVMMipsInfo",
-            "-lLLVMMipsAsmPrinter",
-            "-lLLVMLanaiDisassembler",
-            "-lLLVMLanaiCodeGen",
-            "-lLLVMLanaiAsmParser",
-            "-lLLVMLanaiDesc",
-            "-lLLVMLanaiAsmPrinter",
-            "-lLLVMLanaiInfo",
-            "-lLLVMHexagonDisassembler",
-            "-lLLVMHexagonCodeGen",
-            "-lLLVMHexagonAsmParser",
-            "-lLLVMHexagonDesc",
-            "-lLLVMHexagonInfo",
-            "-lLLVMBPFDisassembler",
-            "-lLLVMBPFCodeGen",
-            "-lLLVMBPFDesc",
-            "-lLLVMBPFInfo",
-            "-lLLVMBPFAsmPrinter",
-            "-lLLVMARMDisassembler",
-            "-lLLVMARMCodeGen",
-            "-lLLVMARMAsmParser",
-            "-lLLVMARMDesc",
-            "-lLLVMARMInfo",
-            "-lLLVMARMAsmPrinter",
-            "-lLLVMAMDGPUDisassembler",
-            "-lLLVMAMDGPUCodeGen",
-            "-lLLVMAMDGPUAsmParser",
-            "-lLLVMAMDGPUDesc",
-            "-lLLVMAMDGPUInfo",
-            "-lLLVMAMDGPUAsmPrinter",
-            "-lLLVMAMDGPUUtils",
-            "-lLLVMAArch64Disassembler",
-            "-lLLVMAArch64CodeGen",
-            "-lLLVMAArch64AsmParser",
-            "-lLLVMAArch64Desc",
-            "-lLLVMAArch64Info",
-            "-lLLVMAArch64AsmPrinter",
-            "-lLLVMAArch64Utils",
-            "-lLLVMObjectYAML",
-            "-lLLVMLibDriver",
-            "-lLLVMOption",
-            "-lLLVMX86Disassembler",
-            "-lLLVMX86AsmParser",
-            "-lLLVMX86CodeGen",
-            "-lLLVMGlobalISel",
-            "-lLLVMSelectionDAG",
-            "-lLLVMAsmPrinter",
-            "-lLLVMDebugInfoCodeView",
-            "-lLLVMDebugInfoMSF",
-            "-lLLVMX86Desc",
-            "-lLLVMMCDisassembler",
-            "-lLLVMX86Info",
-            "-lLLVMX86AsmPrinter",
-            "-lLLVMX86Utils",
-            "-lLLVMMCJIT",
-            "-lLLVMLineEditor",
-            "-lLLVMInterpreter",
-            "-lLLVMExecutionEngine",
-            "-lLLVMRuntimeDyld",
-            "-lLLVMCodeGen",
-            "-lLLVMTarget",
-            "-lLLVMCoroutines",
-            "-lLLVMipo",
-            "-lLLVMInstrumentation",
-            "-lLLVMVectorize",
-            "-lLLVMScalarOpts",
-            "-lLLVMLinker",
-            "-lLLVMIRReader",
-            "-lLLVMAsmParser",
-            "-lLLVMInstCombine",
-            "-lLLVMTransformUtils",
-            "-lLLVMBitWriter",
-            "-lLLVMAnalysis",
-            "-lLLVMProfileData",
-            "-lLLVMObject",
-            "-lLLVMMCParser",
-            "-lLLVMMC",
-            "-lLLVMBitReader",
-            "-lLLVMCore",
-            "-lLLVMBinaryFormat",
-            "-lLLVMSupport",
-            "-lLLVMDemangle",
-            "-ldl",
-            "-lclangTooling",
-            "-lclangToolingCore",
-            "-lclangFrontend",
-            "-lclangDriver",
-            "-lclangSerialization",
-            "-lclangCodeGen",
-            "-lclangParse",
-            "-lclangSema",
-            "-lclangAnalysis",
-            "-lclangRewriteFrontend",
-            "-lclangRewrite",
-            "-lclangEdit",
-            "-lclangAST",
-            "-lclangLex",
-            "-lclangBasic",
-            "-lclang",
-            "-ldl",
-            "-pthread",
-            "-lLLVMTarget -lLLVMMC",
-            "-lLLVMObject -lLLVMCore",
-            "-ldl",
-            "-lcurses",
-            "-lLLVMSupport",
-            "-lcurses",
-            "-ldl",
-            "-lz",
-        ],
-        "//conditions:default": [
-            "-Wl,-rpath,/home/linuxbrew/.linuxbrew/opt/llvm/lib",
-            "-L/home/linuxbrew/.linuxbrew/opt/gcc/lib64",
-            "-Wl,-rpath,/home/linuxbrew/.linuxbrew/opt/gcc/lib64",
-            "-L/home/linuxbrew/.linuxbrew/opt/llvm/lib",
-            "-lLLVMLTO",
-            "-lLLVMPasses",
-            "-lLLVMObjCARCOpts",
-            "-lLLVMMIRParser",
-            "-lLLVMSymbolize",
-            "-lLLVMDebugInfoPDB",
-            "-lLLVMDebugInfoDWARF",
-            "-lLLVMCoverage",
-            "-lLLVMTableGen",
-            "-lLLVMDlltoolDriver",
-            "-lLLVMOrcJIT",
-            "-lLLVMXCoreDisassembler",
-            "-lLLVMXCoreCodeGen",
-            "-lLLVMXCoreDesc",
-            "-lLLVMXCoreInfo",
-            "-lLLVMXCoreAsmPrinter",
-            "-lLLVMSystemZDisassembler",
-            "-lLLVMSystemZCodeGen",
-            "-lLLVMSystemZAsmParser",
-            "-lLLVMSystemZDesc",
-            "-lLLVMSystemZInfo",
-            "-lLLVMSystemZAsmPrinter",
-            "-lLLVMSparcDisassembler",
-            "-lLLVMSparcCodeGen",
-            "-lLLVMSparcAsmParser",
-            "-lLLVMSparcDesc",
-            "-lLLVMSparcInfo",
-            "-lLLVMSparcAsmPrinter",
-            "-lLLVMPowerPCDisassembler",
-            "-lLLVMPowerPCCodeGen",
-            "-lLLVMPowerPCAsmParser",
-            "-lLLVMPowerPCDesc",
-            "-lLLVMPowerPCInfo",
-            "-lLLVMPowerPCAsmPrinter",
-            "-lLLVMNVPTXCodeGen",
-            "-lLLVMNVPTXDesc",
-            "-lLLVMNVPTXInfo",
-            "-lLLVMNVPTXAsmPrinter",
-            "-lLLVMMSP430CodeGen",
-            "-lLLVMMSP430Desc",
-            "-lLLVMMSP430Info",
-            "-lLLVMMSP430AsmPrinter",
-            "-lLLVMMipsDisassembler",
-            "-lLLVMMipsCodeGen",
-            "-lLLVMMipsAsmParser",
-            "-lLLVMMipsDesc",
-            "-lLLVMMipsInfo",
-            "-lLLVMMipsAsmPrinter",
-            "-lLLVMLanaiDisassembler",
-            "-lLLVMLanaiCodeGen",
-            "-lLLVMLanaiAsmParser",
-            "-lLLVMLanaiDesc",
-            "-lLLVMLanaiAsmPrinter",
-            "-lLLVMLanaiInfo",
-            "-lLLVMHexagonDisassembler",
-            "-lLLVMHexagonCodeGen",
-            "-lLLVMHexagonAsmParser",
-            "-lLLVMHexagonDesc",
-            "-lLLVMHexagonInfo",
-            "-lLLVMBPFDisassembler",
-            "-lLLVMBPFCodeGen",
-            "-lLLVMBPFAsmParser",
-            "-lLLVMBPFDesc",
-            "-lLLVMBPFInfo",
-            "-lLLVMBPFAsmPrinter",
-            "-lLLVMARMDisassembler",
-            "-lLLVMARMCodeGen",
-            "-lLLVMARMAsmParser",
-            "-lLLVMARMDesc",
-            "-lLLVMARMInfo",
-            "-lLLVMARMAsmPrinter",
-            "-lLLVMARMUtils",
-            "-lLLVMAMDGPUDisassembler",
-            "-lLLVMAMDGPUCodeGen",
-            "-lLLVMAMDGPUAsmParser",
-            "-lLLVMAMDGPUDesc",
-            "-lLLVMAMDGPUInfo",
-            "-lLLVMAMDGPUAsmPrinter",
-            "-lLLVMAMDGPUUtils",
-            "-lLLVMAArch64Disassembler",
-            "-lLLVMAArch64CodeGen",
-            "-lLLVMAArch64AsmParser",
-            "-lLLVMAArch64Desc",
-            "-lLLVMAArch64Info",
-            "-lLLVMAArch64AsmPrinter",
-            "-lLLVMAArch64Utils",
-            "-lLLVMObjectYAML",
-            "-lLLVMLibDriver",
-            "-lLLVMOption",
-            "-lLLVMWindowsManifest",
-            "-lLLVMFuzzMutate",
-            "-lLLVMX86Disassembler",
-            "-lLLVMX86AsmParser",
-            "-lLLVMX86CodeGen",
-            "-lLLVMGlobalISel",
-            "-lLLVMSelectionDAG",
-            "-lLLVMAsmPrinter",
-            "-lLLVMDebugInfoCodeView",
-            "-lLLVMDebugInfoMSF",
-            "-lLLVMX86Desc",
-            "-lLLVMMCDisassembler",
-            "-lLLVMX86Info",
-            "-lLLVMX86AsmPrinter",
-            "-lLLVMX86Utils",
-            "-lLLVMMCJIT",
-            "-lLLVMLineEditor",
-            "-lLLVMInterpreter",
-            "-lLLVMExecutionEngine",
-            "-lLLVMRuntimeDyld",
-            "-lLLVMCodeGen",
-            "-lLLVMTarget",
-            "-lLLVMCoroutines",
-            "-lLLVMipo",
-            "-lLLVMInstrumentation",
-            "-lLLVMVectorize",
-            "-lLLVMScalarOpts",
-            "-lLLVMLinker",
-            "-lLLVMIRReader",
-            "-lLLVMAsmParser",
-            "-lLLVMInstCombine",
-            "-lLLVMTransformUtils",
-            "-lLLVMBitWriter",
-            "-lLLVMAnalysis",
-            "-lLLVMProfileData",
-            "-lLLVMObject",
-            "-lLLVMMCParser",
-            "-lLLVMMC",
-            "-lLLVMBitReader",
-            "-lLLVMCore",
-            "-lLLVMBinaryFormat",
-            "-lLLVMSupport",
-            "-lLLVMDemangle",
-            "-ldl",
-            "-lclangTooling",
-            "-lclangToolingCore",
-            "-lclangFrontend",
-            "-lclangDriver",
-            "-lclangSerialization",
-            "-lclangCodeGen",
-            "-lclangParse",
-            "-lclangSema",
-            "-lclangAnalysis",
-            "-lclangRewriteFrontend",
-            "-lclangRewrite",
-            "-lclangEdit",
-            "-lclangAST",
-            "-lclangLex",
-            "-lclangBasic",
-            "-lclang",
-            "-ldl",
-            "-pthread",
-            "-lLLVMTarget -lLLVMMC",
-            "-lLLVMObject -lLLVMCore",
-            "-ldl",
-            "-lcurses",
-            "-lLLVMSupport",
-            "-lcurses",
-            "-ldl",
-            "-lz",
-            "-lLLVMLTO",
-            "-lLLVMPasses",
-            "-lLLVMObjCARCOpts",
-            "-lLLVMMIRParser",
-            "-lLLVMSymbolize",
-            "-lLLVMDebugInfoPDB",
-            "-lLLVMDebugInfoDWARF",
-            "-lLLVMCoverage",
-            "-lLLVMTableGen",
-            "-lLLVMDlltoolDriver",
-            "-lLLVMOrcJIT",
-            "-lLLVMXCoreDisassembler",
-            "-lLLVMXCoreCodeGen",
-            "-lLLVMXCoreDesc",
-            "-lLLVMXCoreInfo",
-            "-lLLVMXCoreAsmPrinter",
-            "-lLLVMSystemZDisassembler",
-            "-lLLVMSystemZCodeGen",
-            "-lLLVMSystemZAsmParser",
-            "-lLLVMSystemZDesc",
-            "-lLLVMSystemZInfo",
-            "-lLLVMSystemZAsmPrinter",
-            "-lLLVMSparcDisassembler",
-            "-lLLVMSparcCodeGen",
-            "-lLLVMSparcAsmParser",
-            "-lLLVMSparcDesc",
-            "-lLLVMSparcInfo",
-            "-lLLVMSparcAsmPrinter",
-            "-lLLVMPowerPCDisassembler",
-            "-lLLVMPowerPCCodeGen",
-            "-lLLVMPowerPCAsmParser",
-            "-lLLVMPowerPCDesc",
-            "-lLLVMPowerPCInfo",
-            "-lLLVMPowerPCAsmPrinter",
-            "-lLLVMNVPTXCodeGen",
-            "-lLLVMNVPTXDesc",
-            "-lLLVMNVPTXInfo",
-            "-lLLVMNVPTXAsmPrinter",
-            "-lLLVMMSP430CodeGen",
-            "-lLLVMMSP430Desc",
-            "-lLLVMMSP430Info",
-            "-lLLVMMSP430AsmPrinter",
-            "-lLLVMMipsDisassembler",
-            "-lLLVMMipsCodeGen",
-            "-lLLVMMipsAsmParser",
-            "-lLLVMMipsDesc",
-            "-lLLVMMipsInfo",
-            "-lLLVMMipsAsmPrinter",
-            "-lLLVMLanaiDisassembler",
-            "-lLLVMLanaiCodeGen",
-            "-lLLVMLanaiAsmParser",
-            "-lLLVMLanaiDesc",
-            "-lLLVMLanaiAsmPrinter",
-            "-lLLVMLanaiInfo",
-            "-lLLVMHexagonDisassembler",
-            "-lLLVMHexagonCodeGen",
-            "-lLLVMHexagonAsmParser",
-            "-lLLVMHexagonDesc",
-            "-lLLVMHexagonInfo",
-            "-lLLVMBPFDisassembler",
-            "-lLLVMBPFCodeGen",
-            "-lLLVMBPFAsmParser",
-            "-lLLVMBPFDesc",
-            "-lLLVMBPFInfo",
-            "-lLLVMBPFAsmPrinter",
-            "-lLLVMARMDisassembler",
-            "-lLLVMARMCodeGen",
-            "-lLLVMARMAsmParser",
-            "-lLLVMARMDesc",
-            "-lLLVMARMInfo",
-            "-lLLVMARMAsmPrinter",
-            "-lLLVMARMUtils",
-            "-lLLVMAMDGPUDisassembler",
-            "-lLLVMAMDGPUCodeGen",
-            "-lLLVMAMDGPUAsmParser",
-            "-lLLVMAMDGPUDesc",
-            "-lLLVMAMDGPUInfo",
-            "-lLLVMAMDGPUAsmPrinter",
-            "-lLLVMAMDGPUUtils",
-            "-lLLVMAArch64Disassembler",
-            "-lLLVMAArch64CodeGen",
-            "-lLLVMAArch64AsmParser",
-            "-lLLVMAArch64Desc",
-            "-lLLVMAArch64Info",
-            "-lLLVMAArch64AsmPrinter",
-            "-lLLVMAArch64Utils",
-            "-lLLVMObjectYAML",
-            "-lLLVMLibDriver",
-            "-lLLVMOption",
-            "-lLLVMWindowsManifest",
-            "-lLLVMFuzzMutate",
-            "-lLLVMX86Disassembler",
-            "-lLLVMX86AsmParser",
-            "-lLLVMX86CodeGen",
-            "-lLLVMGlobalISel",
-            "-lLLVMSelectionDAG",
-            "-lLLVMAsmPrinter",
-            "-lLLVMDebugInfoCodeView",
-            "-lLLVMDebugInfoMSF",
-            "-lLLVMX86Desc",
-            "-lLLVMMCDisassembler",
-            "-lLLVMX86Info",
-            "-lLLVMX86AsmPrinter",
-            "-lLLVMX86Utils",
-            "-lLLVMMCJIT",
-            "-lLLVMLineEditor",
-            "-lLLVMInterpreter",
-            "-lLLVMExecutionEngine",
-            "-lLLVMRuntimeDyld",
-            "-lLLVMCodeGen",
-            "-lLLVMTarget",
-            "-lLLVMCoroutines",
-            "-lLLVMipo",
-            "-lLLVMInstrumentation",
-            "-lLLVMVectorize",
-            "-lLLVMScalarOpts",
-            "-lLLVMLinker",
-            "-lLLVMIRReader",
-            "-lLLVMAsmParser",
-            "-lLLVMInstCombine",
-            "-lLLVMTransformUtils",
-            "-lLLVMBitWriter",
-            "-lLLVMAnalysis",
-            "-lLLVMProfileData",
-            "-lLLVMObject",
-            "-lLLVMMCParser",
-            "-lLLVMMC",
-            "-lLLVMBitReader",
-            "-lLLVMCore",
-            "-lLLVMBinaryFormat",
-            "-lLLVMSupport",
-            "-lLLVMDemangle",
-        ],
-    }),
     visibility = ["//deeplearning/clgen:__subpackages__"],
     deps = select({
-        "//:darwin": ["@llvm_headers_mac//:headers"],
-        "//conditions:default": ["@llvm_headers_linux//:headers"],
+        "//:darwin": [
+            "@llvm_headers_mac//:headers",
+            "@llvm_mac//:libraries",
+        ],
+        "//conditions:default": [
+            "@llvm_headers_linux//:headers",
+            "@llvm_linux//:libraries",
+        ],
     }),
 )
