Work in progress on Docker image.

--- a/learn/docker/clgen/Dockerfile
+++ b/learn/docker/clgen/Dockerfile
@@ -11,13 +11,13 @@ RUN apt-get update && \
     apt-get install -y python3.6 && \
     ln -s /usr/bin/python3.6 /usr/bin/python
 
-# Add and unpack the binary archives.
-RUN mkdir -p /usr/local/opt/clgen
-ADD clang_test.tar.bz2 /usr/local/opt/clgen/
-
 # Add the tiny corpus.
 RUN mkdir /tmp/tiny
 ADD corpus.tar.bz2 /tmp/tiny
 ADD config.pbtxt /tmp/tiny
+
+# Add and unpack the binary archives.
+RUN mkdir -p /usr/local/opt/clgen
+ADD clgen.tar.bz2 /usr/local/opt/clgen/
 
 WORKDIR /usr/local/opt/clgen
